--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,3 +50,12 @@ install(
     EXPORT ${PROJECT_NAME}-targets
     DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}"
 )
+
+# testing
+if(BUILD_TESTING)
+    enable_testing()
+    find_package(GTest REQUIRED)
+    add_executable(tests tests/single_threaded_tests.cpp)
+    target_link_libraries(tests GTest::gtest_main broadcast_queue)
+    gtest_discover_tests(tests)
+endif()
