--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,6 +19,8 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
 
+    runs-on: ${{ matrix.os }}
+
     steps:
     - uses: actions/checkout@v3
 
