--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,7 +25,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install gtest
-      if: ${{ matrix.os }} == ubuntu-latest
+      if: ${{ matrix.os == 'ubuntu-latest' }}
       run: sudo apt install libgtest-dev
 
     - name: Configure CMake
