--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,12 +15,17 @@ jobs:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v3
 
     - name: Install gtest
+      if: ${{ matrix.os == 'ubuntu-latest' }}
       run: sudo apt install libgtest-dev
 
     - name: Configure CMake
